update phan cong cong viec